sumo/tests/duarouter/flows/errors/vehicle_empty_departspeed/errors.duarouter
Error: The loader for flows from file 'input_flows.flows.xml' could not be initialised;
 Reason: Invalid departspeed definition for vehicle 0.
Quitting (on error).
